--- a/ProductManagementSystem/Views/Items/Delete.cshtml
+++ b/ProductManagementSystem/Views/Items/Delete.cshtml
@@ -4,31 +4,25 @@
     ViewData["Title"] = "Delete Item";
 }
 
-<h2>Delete Item</h2>
+<h2 class="mb-4">Delete Item</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h5>Are you sure you want to delete this item?</h5>
 
-<div>
-    <h4>Item</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-    </dl>
+<div class="card mt-3">
+    <div class="card-body">
+        <h5 class="card-title fw-bold">@Model.Name</h5>
+        <p class="card-text">
+            <strong>Item Number:</strong> @Model.ItemNumber <br />
+            <strong>Description:</strong> @Model.Description <br />
+            <strong>Default Price:</strong> $@Model.DefaultPrice <br />
+            <strong>Category:</strong> @Model.ItemCategory <br />
+            <strong>Status:</strong> @(Model.Status ? "Active" : "Inactive")
+        </p>
 
-    <form asp-action="Delete" method="post">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
-        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
-    </form>
+        <form asp-action="Delete" method="post">
+            <input type="hidden" asp-for="Id" />
+            <button type="submit" class="btn btn-danger">Delete</button>
+            <a asp-action="Index" class="btn btn-secondary ms-2">Cancel</a>
+        </form>
+    </div>
 </div>
